# serializer version: 1
# name: TestCollectivitesAPI.test_competences_list[competence_plan]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_competences_list[competence_schema]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_competences_list[competence_schema_ou_plan]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_competences_list[sans_competence]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[many_departments]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[many_types]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '132435465',
      'type': 'SMO',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[no_filter]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '132435465',
      'type': 'SMO',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[one_department]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[region]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[region_and_type]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_with_groupements_and_members[avec_groupements]
  list([
    dict({
      'codeInsee': '30032',
      'departementCode': '30',
      'groupements': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Beaucaire',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30034',
      'departementCode': '30',
      'groupements': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Bellegarde',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30117',
      'departementCode': '30',
      'groupements': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Fourques',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30135',
      'departementCode': '30',
      'groupements': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Jonquières-Saint-Vincent',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30336',
      'departementCode': '30',
      'groupements': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Vallabrègues',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'groupements': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': "CC Beaucaire Terre d'Argence",
      'regionCode': '76',
      'siren': '243000585',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'groupements': list([
      ]),
      'intercommunaliteCode': '',
      'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'regionCode': '76',
      'siren': '253000020',
      'type': 'SMO',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_with_groupements_and_members[avec_groupements_niveaux_superieurs]
  list([
    dict({
      'codeInsee': '30032',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Beaucaire',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30034',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Bellegarde',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30117',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Fourques',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30135',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Jonquières-Saint-Vincent',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30336',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': 'Vallabrègues',
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intercommunaliteCode': '',
      'intitule': "CC Beaucaire Terre d'Argence",
      'regionCode': '76',
      'siren': '243000585',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'groupements_niveaux_superieurs': list([
      ]),
      'intercommunaliteCode': '',
      'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'regionCode': '76',
      'siren': '253000020',
      'type': 'SMO',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_with_groupements_and_members[avec_membres]
  list([
    dict({
      'codeInsee': '30032',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Beaucaire',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30034',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Bellegarde',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30117',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Fourques',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30135',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Jonquières-Saint-Vincent',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30336',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Vallabrègues',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': "CC Beaucaire Terre d'Argence",
      'membres': list([
        dict({
          'codeInsee': '30032',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Beaucaire',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30034',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Bellegarde',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30117',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Fourques',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30135',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Jonquières-Saint-Vincent',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30336',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Vallabrègues',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
      ]),
      'regionCode': '76',
      'siren': '243000585',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'membres': list([
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'regionCode': '76',
      'siren': '253000020',
      'type': 'SMO',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_with_groupements_and_members[avec_membres_niveaux_inferieurs]
  list([
    dict({
      'codeInsee': '30032',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Beaucaire',
      'membres_niveaux_inferieurs': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30034',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Bellegarde',
      'membres_niveaux_inferieurs': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30117',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Fourques',
      'membres_niveaux_inferieurs': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30135',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Jonquières-Saint-Vincent',
      'membres_niveaux_inferieurs': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '30336',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Vallabrègues',
      'membres_niveaux_inferieurs': list([
      ]),
      'regionCode': '76',
      'siren': '',
      'type': 'COM',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': "CC Beaucaire Terre d'Argence",
      'membres_niveaux_inferieurs': list([
        dict({
          'codeInsee': '30032',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Beaucaire',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30034',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Bellegarde',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30117',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Fourques',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30135',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Jonquières-Saint-Vincent',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30336',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Vallabrègues',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
      ]),
      'regionCode': '76',
      'siren': '243000585',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'membres_niveaux_inferieurs': list([
        dict({
          'codeInsee': '30032',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Beaucaire',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30034',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Bellegarde',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30117',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Fourques',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30135',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Jonquières-Saint-Vincent',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '30336',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': 'Vallabrègues',
          'regionCode': '76',
          'siren': '',
          'type': 'COM',
        }),
        dict({
          'codeInsee': '',
          'departementCode': '30',
          'intercommunaliteCode': '',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
      ]),
      'regionCode': '76',
      'siren': '253000020',
      'type': 'SMO',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_without_communes_from_list[default_value]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_without_communes_from_list[with_communes]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_without_communes_from_list[without_communes]
  list([
    dict({
      'codeInsee': '',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[many_departments]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '30000',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Commune 2',
      'regionCode': '76',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[no_filter]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '30000',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Commune 2',
      'regionCode': '76',
      'type': 'COM',
    }),
    dict({
      'code': '84000',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Commune 3',
      'regionCode': '93',
      'type': 'COMD',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[one_department]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[region]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '84000',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Commune 3',
      'regionCode': '93',
      'type': 'COMD',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[region_and_type]
  list([
    dict({
      'code': '84000',
      'departementCode': '84',
      'intercommunaliteCode': '',
      'intitule': 'Commune 3',
      'regionCode': '93',
      'type': 'COMD',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[type_commune]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intercommunaliteCode': '',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '30000',
      'departementCode': '30',
      'intercommunaliteCode': '',
      'intitule': 'Commune 2',
      'regionCode': '76',
      'type': 'COM',
    }),
  ])
# ---
# name: TestEventAPI.test_create
  dict({
    'attachements': list([
      dict({
        'id': '00000000-1111-0000-0000-000000000000',
        'name': 'test_1.pdf',
      }),
      dict({
        'id': 'sudocuh/0/00000000000000001.pdf',
        'name': 'test_2.pdf',
      }),
    ]),
    'dateEvenement': '2012-06-03',
    'description': 'Lorem ipsum dolor sit amet',
    'fromSudocuh': None,
    'id': '00000000-1111-0000-0000-000000000000',
    'isValid': True,
    'procedureId': '00000000-0000-0000-1111-000000000000',
    'type': 'Event Test 1',
    'visibility': 'public',
  })
# ---
# name: TestEventAPI.test_detail
  dict({
    'attachements': list([
      dict({
        'id': '00000000-1111-0000-0000-000000000000',
        'name': 'test_1.pdf',
      }),
      dict({
        'id': 'sudocuh/0/00000000000000001.pdf',
        'name': 'test_2.pdf',
      }),
    ]),
    'dateEvenement': '2012-06-03',
    'description': 'Lorem ipsum dolor sit amet',
    'fromSudocuh': None,
    'id': '00000000-0000-0000-1111-000000000000',
    'isValid': True,
    'procedureId': '00000000-0000-0000-1111-000000000000',
    'type': 'Event Test 1',
    'visibility': 'public',
  })
# ---
# name: TestEventAPI.test_list[filter_procedure]
  list([
    dict({
      'dateEvenement': '2012-06-03',
      'fromSudocuh': None,
      'id': '00000000-0000-0000-3333-000000000000',
      'isValid': True,
      'procedureId': '00000000-0000-0000-1111-000000000000',
      'type': 'Event Test 3',
      'visibility': 'public',
    }),
    dict({
      'dateEvenement': '2012-06-02',
      'fromSudocuh': None,
      'id': '00000000-0000-0000-1111-000000000000',
      'isValid': True,
      'procedureId': '00000000-0000-0000-1111-000000000000',
      'type': 'Event Test 1',
      'visibility': 'public',
    }),
  ])
# ---
# name: TestEventAPI.test_list[no_filter]
  list([
    dict({
      'dateEvenement': '2012-06-03',
      'fromSudocuh': None,
      'id': '00000000-0000-0000-2222-000000000000',
      'isValid': True,
      'procedureId': '00000000-0000-0000-2222-000000000000',
      'type': 'Event Test 2',
      'visibility': 'public',
    }),
    dict({
      'dateEvenement': '2012-06-03',
      'fromSudocuh': None,
      'id': '00000000-0000-0000-3333-000000000000',
      'isValid': True,
      'procedureId': '00000000-0000-0000-1111-000000000000',
      'type': 'Event Test 3',
      'visibility': 'public',
    }),
    dict({
      'dateEvenement': '2012-06-02',
      'fromSudocuh': None,
      'id': '00000000-0000-0000-1111-000000000000',
      'isValid': True,
      'procedureId': '00000000-0000-0000-1111-000000000000',
      'type': 'Event Test 1',
      'visibility': 'public',
    }),
  ])
# ---
# name: TestEventAPI.test_update
  dict({
    'attachements': list([
      dict({
        'id': '00000000-1111-0000-0000-000000000000',
        'name': 'test_1.pdf',
      }),
      dict({
        'id': 'sudocuh/0/00000000000000001.pdf',
        'name': 'test_2.pdf',
      }),
    ]),
    'dateEvenement': '2022-10-01',
    'description': 'Lorem ipsum dolor sit amet - updated',
    'fromSudocuh': None,
    'id': '00000000-0000-0000-2222-000000000000',
    'isValid': True,
    'procedureId': '00000000-0000-0000-2222-000000000000',
    'type': 'Event Test 1 updated',
    'visibility': 'private',
  })
# ---
# name: TestEventAPI.test_update.1
  dict({
    'attachements': list([
      dict({
        'id': '00000000-1111-0000-0000-000000000000',
        'name': 'test_1.pdf',
      }),
      dict({
        'id': 'sudocuh/0/00000000000000001.pdf',
        'name': 'test_2.pdf',
      }),
    ]),
    'dateEvenement': '2022-10-02',
    'description': 'Lorem ipsum dolor sit amet - patched',
    'fromSudocuh': None,
    'id': '00000000-0000-0000-2222-000000000000',
    'isValid': True,
    'procedureId': '00000000-0000-0000-2222-000000000000',
    'type': 'Event Test 1 patched',
    'visibility': 'public',
  })
# ---
# name: TestEventAPI.test_update_procedure_is_not_updated
  dict({
    'attachements': list([
    ]),
    'dateEvenement': '2022-10-01',
    'description': 'Lorem ipsum dolor sit amet - updated',
    'fromSudocuh': None,
    'id': '00000000-0000-0000-2222-000000000000',
    'isValid': True,
    'procedureId': '00000000-0000-0000-2222-000000000000',
    'type': 'Event Test 1 updated',
    'visibility': 'private',
  })
# ---
# name: TestEventAPI.test_update_procedure_is_not_updated.1
  dict({
    'attachements': list([
    ]),
    'dateEvenement': '2022-10-01',
    'description': 'Lorem ipsum dolor sit amet - updated',
    'fromSudocuh': None,
    'id': '00000000-0000-0000-2222-000000000000',
    'isValid': True,
    'procedureId': '00000000-0000-0000-2222-000000000000',
    'type': 'Event Test 1 updated',
    'visibility': 'private',
  })
# ---
